@@ -1,3 +1,9 @@
+2009-02-03  Ross Burton  <ross@linux.intel.com>
+
+	* libgconf-bridge/gconf-bridge.c:
+	Don't connect to row-inserted many times, but connect to
+	row-deleted and so on. (#1430, thanks Matthew Barnes)
+
 2008-12-08  Ross Burton  <ross@linux.intel.com>
 
 	* libgconf-bridge/gconf-bridge.c:
